Fix: Table header not visible

--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,6 @@ table {
 
 table thead {
     background: #2196f3;
-    display: none;
 }
 
 table thead th {
